Opened 14 years ago

Closed 14 years ago

#6892 closed bug (fixed)

BePDF doesn't run for runtime loader error

Reported by: pulkomandy Owned by: bonefish
Priority: normal Milestone: R1/alpha3
Component: System/runtime_loader Version: R1/Development
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

This is hrev39614, but it happenned yesterday with older revisions too.

Running BePDF results in the following message :

runtime_loader: /boot/apps/BePDF/lib/liblayout.so: Could not resolve symbol '__ti5BFont' 
resolve symbol "__ti5BFont" returned: -2147478780 

It looks like this is an artifact of the weak symbol branch merging, or at least it appeared near that commit, and I don't see anything else that may affect it.

Change History (4)

comment:1 by luroh, 14 years ago

I confirm, the problem arrived with hrev39571.

comment:2 by anevilyak, 14 years ago

Interestingly the above (BFont's type_info) isn't present in either gcc2 or 4's libbe.so now, for what it's worth. Other classes like BFile still have it though.

comment:3 by pulkomandy, 14 years ago

The missing type info sounds like it's right, since there is no virtual method in BFont. However, it was there before, so something went wrong somewhere :)

comment:4 by bonefish, 14 years ago

Resolution: fixed
Status: newclosed

Fixed in hrev39617.

Note: See TracTickets for help on using tickets.