find_undefined_symbol_beos(): Look up the symbol in the requesting image first. Fixes binary compatibility issue introduced with symbol preemption support in the runtime loader. For unknown reasons liblayout.so, though linked symbolically, contains a non-weak (!), preemptable BFont type info, which was no longer resolved correctly with the new method. Fixes #6892.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@39617 a95241bf-73f2-0310-859d-f6bbb57e9c96